--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "react-native-gesture-handler": "^1.10.3",
     "react-native-safe-area-context": "^3.3.0",
     "react-native-screens": "~3.4.0",
-    "react-native-web": "^0.17.1"
+    "react-native-web": "^0.17.1",
+    "react-redux": "^7.2.5",
+    "redux": "^4.1.2",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
