--- a/package.json
+++ b/package.json
@@ -9,17 +9,23 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/bottom-tabs": "^6.0.9",
+    "@react-navigation/material-bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/stack": "^6.0.7",
-    "expo": "^41.0.1",
+    "expo": "^43.0.4",
+    "expo-camera": "~12.0.3",
+    "expo-image-picker": "~11.0.3",
     "expo-status-bar": "~1.0.4",
     "firebase": "^8.10.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-paper": "^4.11.0",
     "react-native-safe-area-context": "^3.3.0",
     "react-native-screens": "~3.4.0",
+    "react-native-vector-icons": "^9.0.0",
     "react-native-web": "^0.17.1",
     "react-redux": "^7.2.5",
     "redux": "^4.1.2",
